Fixed damka bugs (jumping through 2 pieces), edited css (size for FHD)

--- a/css/main.css
+++ b/css/main.css
@@ -57,8 +57,8 @@ h1, h2, h3, h4, h5, h6{
 	display: flex;
 	flex-wrap: wrap;
 	text-align: center;
-	width: 800px;
-	height: 800px;
+	width: 600px;
+	height: 600px;
 	border: 1px solid black;
 }
 
@@ -70,8 +70,8 @@ h1, h2, h3, h4, h5, h6{
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	width: 78px;
-	height: 78px;
+	width: 58px;
+	height: 58px;
 	border: 1px solid black;
 }
 
@@ -84,8 +84,8 @@ h1, h2, h3, h4, h5, h6{
 	align-items: center;
 	justify-content: center;
 	border: none;
-	width: 80px;
-	height: 80px;
+	width: 60px;
+	height: 60px;
 	background-image: url('../img/texture.jpg');
 	background-size: cover;
 	background-repeat: repeat;
